sonar analysis