@@ -48,30 +48,18 @@ pipeline {
 
         stage('Sonar Analysis') {
             environment {
-                scannerHome = tool "${SONARSCANNER}" // Ensure SONARSCANNER is configured in Jenkins
+                scannerHome = tool "${SONARSCANNER}"
             }
             steps {
-                withSonarQubeEnv("${SONARSERVER}") { // Ensure SONARSERVER is configured in Jenkins
-                    script {
-                        // Verify sonar-scanner is available
-                       def scannerPath = "${scannerHome}/bin/sonar-scanner"
-                       if (!fileExists(scannerPath)) {
-                           error "SonarScanner not found at ${scannerPath}. Please check the tool configuration."
-                       }
-
-                       // Run sonar-scanner with debug mode
-                       sh """
-                           ${scannerPath} -X \
-                           -Dsonar.projectKey=vprofile \
-                           -Dsonar.projectName=vprofile \
-                           -Dsonar.projectVersion=1.0 \
-                           -Dsonar.sources=src/ \
-                           -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                           -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                           -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                           -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
-                           -Dsonar.scanner.jvmOptions="--add-opens java.base/java.lang=ALL-UNNAMED"
-                      """
+               withSonarQubeEnv("${SONARSERVER}") {
+                   sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
+                   -Dsonar.projectName=vprofile \
+                   -Dsonar.projectVersion=1.0 \
+                   -Dsonar.sources=src/ \
+                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
+                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
+                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
               }
             }
         }
